[package]
name = "mysqlclient-src"
version = "0.1.5+9.5.0"
edition = "2021"
build = "build.rs"
description = "Bundled version of libmysqlclient"
license = "GPL-2.0-only"
documentation = "https://docs.rs/mysqlclient-src/"
repository = "https://github.com/sgrif/mysqlclient-sys"
links = "mysqlclient_sys_src"
keywords = ["bindings", "libmysqlclient", "mysqlclient-sys", "bundled"]
categories = ["database", "external-ffi-bindings"]

include = [
   "/build.rs",
   "/src",
   "/source/CMakeLists.txt",
   "/source/config.h.cmake",
   "/source/configure.cmake",
   "/source/cmake",
   "/source/include",
   "/source/MYSQL_VERSION",
   "/source/extra/libbacktrace",
   "/source/extra/zlib",
   "/source/extra/zstd",
   "/source/extra/libevent",
   "/source/extra/lz4",
   "/source/extra/rapidjson",
   "/source/extra/libedit",
   "/source/extra/libcno",
   "/source/extra/xxhash",
   "/source/strings",
   "/source/vio",
   "/source/mysys",
   "/source/libmysql",
   "/source/mysql",
   "/source/libchangestreams",
   "/source/storage/ndb/cmake",
   "/source/storage/ndb/CMakeLists.txt",
   "/source/share",
   "/source/libservices",
   "/source/utilities",
   "/source/client",
   "/source/components/libminchassis",
   "/source/router/src/harness/include",
   "/source/sql/",
   "/source/sql-common/",
   "/source/libs/mysql",
   "/source/man",
   "/source/scripts/mysqlclient.pc.in",
   "/source/scripts/mysql_config.sh",
   "/source/scripts/mysqldumpslow.pl.in",
   "/source/scripts/mysqld_multi.pl.in",
   "/source/scripts/mysqld_safe.sh",
   "/source/scripts/comp_sql.cc",
   "/source/scripts/CMakeLists.txt",
   "/source/scripts/sys_schema/CMakeLists.txt",
   "/source/packaging/WiX",
   "/source/README",
   "/source/extra/unordered_dense/",
   "/source/Doxyfile.in",
   "!/source/sql/mysqld.cc",
   "!/source/sql/sql_yacc.yy",
   "!/source/sql/server_component/mysql_server_event_tracking_bridge_imp.cc",
   "!/source/source/sql/server_component/bulk_data_service.cc",
   "!/source/sql/server_component/server_component.cc",
   "!/source/sql/server_component/mysql_stored_program_imp.cc",
   "!/source/sql/server_component/log_builtins.cc",
   "!/source/sql/server_component/bulk_data_service.cc",
   "!/source/sql/sql_table.cc",
   "!/source/sql/range_optimizer/group_index_skip_scan_plan.cc",
   "!/source/sql/range_optimizer/index_range_scan_plan.cc",
   "!/source/sql/range_optimizer/range_analysis.cc",
   "!/source/sql/range_optimizer/range_optimizer.cc",
   "!/source/sql/range_optimizer/tree.cc",
   "!/source/sql/rpl_binlog_sender.cc",
   "!/source/sql/rpl_handler.cc",
   "!/source/sql/rpl_replica.cc",
   "!/source/sql/rpl_rli.cc",
   "!/source/sql/rpl_rli_pdb.cc",
   "!/source/sql/rpl_source.cc",
   "!/source/sql/spatial.cc",
   "!/source/sql/sql_admin.cc",
   "!/source/sql/sql_base.cc",
   "!/source/sql/sql_class.cc",
   "!/source/sql/sql_db.cc",
   "!/source/sql/sql_derived.cc",
   "!/source/sql/sql_executor.cc",
   "!/source/sql/sql_insert.cc",
   "!/source/sql/sql_lex.cc",
   "!/source/sql/sql_load.cc",
   "!/source/sql/sql_optimizer.cc",
   "!/source/sql/sql_parse.cc",
   "!/source/sql/sql_partition.cc",
   "!/source/sql/sql_planner.cc",
   "!/source/sql/sql_plugin.cc",
   "!/source/sql/sql_prepare.cc",
   "!/source/sql/sql_resolver.cc",
   "!/source/sql/sql_rewrite.cc",
   "!/source/sql/sql_select.cc",
   "!/source/sql/sql_show.cc",
   "!/source/sql/sql_table.cc",
   "!/source/sql/item.cc",
   "!/source/sql/item_cmpfunc.cc",
   "!/source/sql/item_create.cc",
   "!/source/sql/item_func.cc",
   "!/source/sql/item_geofunc.cc",
   "!/source/sql/item_json_func.cc",
   "!/source/sql/item_strfunc.cc",
   "!/source/sql/item_subselect.cc",
   "!/source/sql/item_sum.cc",
   "!/source/sql/item_timefunc.cc",
   "!/source/sql/item_xmlfunc.cc",
   "!/source/sql/iterators/composite_iterators.cc",
   "!/source/sql/iterators/window_iterators.cc",
   "!/source/sql/join_optimizer/access_path.cc",
   "!/source/sql/join_optimizer/explain_access_path.cc",
   "!/source/sql/join_optimizer/interesting_orders.cc",
   "!/source/sql/join_optimizer/join_optimizer.cc",
   "!/source/sql/join_optimizer/make_join_hypergraph.cc",
   "!/source/sql/partitioning/partition_handler.cc",
   "!/source/sql/partition_info.cc",
   "!/source/sql/persisted_variable.cc",
   "!/source/sql/protocol_classic.cc",
   "!/source/sql/window.h",
   "!/source/extra/libedit/libedit-20221030-3.1/configure",
   "!/source/extra/libbacktrace/sha9ae4f4a/configure",
   "!/source/extra/libbacktrace/sha9ae4f4a/configure.ac",
   "!/source/extra/libedit/libedit-20221030-3.1/configure.ac",
   "!/source/extra/libbacktrace/sha9ae4f4a/config/libtool.m4",
   "!/source/extra/libbacktrace/sha9ae4f4a/Makefile.in",
   "!/source/extra/libedit/libedit-20221030-3.1/m4/libtool.m4",
   "!/source/extra/libbacktrace/sha9ae4f4a/ltmain.sh",
   "!/source/extra/libbacktrace/sha9ae4f4a/config/libtool.m4",
   "!/source/extra/libbacktrace/sha9ae4f4a/Makefile.in",
   "!/source/extra/libedit/libedit-20221030-3.1/ltmain.sh",
   "!/source/man/mysqlbinlog.1",
   "!/source/man/mysql.1",
   "!/source/man/myisamchk.1",
   "!/source/man/mysqlrouter.1",
   "!/source/man/ndb_restore.1",
   "!/source/man/mysqldump.1",
   "!/source/sql/binlog.cc",
   "!/source/sql/dd/dd_table.cc",
   "!/source/sql/dd/impl/bootstrap/bootstrapper.cc",
   "!/source/sql/dd/impl/cache/dictionary_client.cc",
   "!/source/sql/dd/impl/upgrade/dd.cc",
   "!/source/sql/dd/info_schema/show.cc",
   "!/source/sql/dd_table_share.cc",
   "!/source/sql/debug_lock_order.cc",
   "!/source/sql/debug_sync.cc",
   "!/source/sql/field.cc",
   "!/source/sql/field.h",
   "!/source/sql/filesort.cc",
   "!/source/sql/gis/srs/srs.cc",
   "!/source/sql/gis/srs/srs.h",
   "!/source/sql/histograms/histogram.cc",
   "!/source/sql/item.h",
   "!/source/sql/item_cmpfunc.h",
   "!/source/sql/item_func.h",
   "!/source/sql/item_geofunc.h",
   "!/source/sql/item_strfunc.h",
   "!/source/sql/item_sum.h",
   "!/source/sql/item_timefunc.h",
   "!/source/sql/join_optimizer/access_path.h",
   "!/source/sql/log.cc",
   "!/source/sql/log.h",
   "!/source/sql/opt_explain.cc",
   "!/source/sql/opt_explain_json.cc",
   "!/source/sql/parse_tree_nodes.cc",
   "!/source/sql/parse_tree_nodes.h",
   "!/source/sql/rpl_rli.h",
   "!/source/sql/session_tracker.cc",
   "!/source/sql/set_var.cc",
   "!/source/sql/sp.cc",
   "!/source/sql/sp_head.cc",
   "!/source/sql/sp_instr.cc",
   "!/source/sql/spatial.h",
   "!/source/sql/sql_const_folding.cc",
   "!/source/sql/sql_lex.h",
   "!/source/sql/sql_locale.cc",
   "!/source/sql/sql_tablespace.cc",
   "!/source/sql/sql_tmp_table.cc",
   "!/source/sql/sql_union.cc",
   "!/source/sql/sql_update.cc",
   "!/source/sql/sql_view.cc",
   "!/source/sql/sys_vars.cc",
   "!/source/sql/sys_vars.h",
   "!/source/sql/table.cc",
   "!/source/sql/table.h",
   "!/source/sql/tztime.cc",
   "!/source/sql/window.cc",

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
link-cplusplus = "1.0"
openssl-sys = { version = "0.9.93" }
openssl-src = { version = "300.0.0", optional = true }

[features]
default = ["with-vendord-openssl"]
with-asan = []
with-vendord-openssl = ["openssl-sys/vendored", "dep:openssl-src"]
